# SisTer

./: .gitignore  CMakeLists.txt  README.md  compose.yml
adapters/droneops/: README.md
adapters/morfocampo/: README.md
adapters/sister_studio/: README.md
apps/sisterctl/: CMakeLists.txt  main.cpp
apps/sisterd/: CMakeLists.txt  auth.cpp  auth.hpp  main.cpp  studio_client.cpp  studio_client.hpp
config/: local_resources.json
contracts/: README.md  camposync_package.schema.json  evidence.schema.json  public_scope.schema.json  sister_studio_capabilities.schema.json  sister_studio_health.schema.json  system_manifest.schema.json
core/: CMakeLists.txt
core/include/sister/: contract.hpp  provenance.hpp  registry.hpp
core/src/: contract.cpp  provenance.cpp  registry.cpp
docker/db/: Dockerfile
docs/: CONCEPTUAL_BASE.md  conceptual
docs/adr/: ADR-0001-contract-oriented-federative-platform.md  ADR-0002-convergence-interface-and-diagnostics.md  ADR-0003-postgresql-postgis-pgvector.md  ADR-0004-sister-studio-service-integration.md  README.md
docs/architecture/: CONTAINERS.md  DATABASE.md  DDD.md  ENVIRONMENTS.md  INTERFACE.md
docs/dai/: DAI.md
docs/governance/: INTEGRATED_PROJECTS.md  PUBLIC_PRIVATE_SCOPE.md  README.md  SISTER_STUDIO_DATA.md
examples/: camponode_manifest_example.json  droneops_manifest_example.json  evidence_example.json  execution_plan.md  feedback_log.md  morfocampo_manifest_example.json  radar_sister_resiliencia_manifest_example.json  sister_audio_manifest_example.json  sister_studio_manifest_example.json  sister_video_manifest_example.json  spec_packet.md
policies/: approval_matrix.md  context_boundary_policy.md  evidence_and_audit_policy.md
prompts/: governance_task_packet.md  task_template.md
scripts/: run_all.sh  run_quality.sh  validate_governance_repo.py  validate_local_resources.py  validate_shell_scripts.sh  validate_tool_contracts.py
tests/: CMakeLists.txt  auth_tests.cpp  core_tests.cpp
web/: admin.html  admin.js  app.js  auth.css  index.html  login.html  login.js  styles.css
(+23 files in other folders)
